fixed delete query

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
     <div>
 
-        <div id="posts"></div>
-	    <script src="script.js"></script>
+        
     </div>
 
+    <div id="listings"></div>
+    <script src="script.js"></script>
 
 
+
+
+
+
+    
 </body>
 </html>
